# internal/api/handlers/user/router.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"cybersafe-backend-api/internal/api/components"
+	"cybersafe-backend-api/internal/api/server/middlewares"
 	"net/http"
 
 	"github.com/go-chi/chi"
@@ -11,7 +12,7 @@ func SetupRoutes(c *components.Components) http.Handler {
 
 	subRouter := chi.NewMux()
 
-	// subRouter.Use(middlewares.Authenticator)
+	subRouter.Use(middlewares.Authenticator)
 
 	subRouter.Get("/", func(w http.ResponseWriter, r *http.Request) {
 		ListUsersHandler(components.HttpComponents(w, r, c))
@@ -27,9 +28,6 @@ func SetupRoutes(c *components.Components) http.Handler {
 	})
 	subRouter.Put("/{id}", func(w http.ResponseWriter, r *http.Request) {
 		UpdateUserHandler(components.HttpComponents(w, r, c))
-	})
-	subRouter.Post("/logoff", func(w http.ResponseWriter, r *http.Request) {
-		LogOffHandler(components.HttpComponents(w, r, c))
 	})
 
 	return subRouter
